# EchoChain

./: .gitignore  Anchor.toml  README.md  package-lock.json  start-dev.ps1  vercel.json
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/mint/: route.ts
frontend/app/api/verify-license/: route.ts
frontend/app/api/voices/: route.ts
frontend/app/create/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/license/[voiceId]/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/use/[mint]/: page.tsx
frontend/components/: AIGenerateButton.tsx  AILicenseSummary.tsx  Header.tsx  SolanaProvider.tsx  VoidHero.tsx  echochain-dashboard.tsx  features-8.tsx  live-sales-dashboard.tsx  testimonial-v2.tsx  testimonials-with-marquee.tsx  voice-testimonial.tsx  void-hero.tsx
frontend/components/ui/: testimonial-card.tsx
frontend/demos/hooks/: useRealtimeSalesData.ts
frontend/lib/: ai.ts  program.ts  supabase.ts
programs/echochain/: Cargo.toml
programs/echochain/src/: lib.rs
tests/: echochain.ts
